--- a/index.html
+++ b/index.html
@@ -86,35 +86,144 @@
       </section>
 
       <!-- Home cards 2 -->
-      <section class="home-cards">
-        <div>
-          <img src="img/card5.png" alt="" />
-          <h3>Save up to $288 on Surface Pro 9 for Business Bundle</h3>
-          <p>Get the tablet versatility and laptop power you need when you bundle Surface Pro 9 for Business with a Surface Pro Signature Keyboard for Business.</p>
-          <a href="#">Shop Surface Pro 9 for Business Bundle <i class="fas fa-chevron-right"></i></a>
-        </div>
+      <section class="home-cards-2">
+        <h2 id="hc2header">For business</h2>
+        <section class="home-cards home-cards-margin">
+          <div>
+            <img src="img/card5.png" alt="" />
+            <h3>Save up to $288 on Surface Pro 9 for Business Bundle</h3>
+            <p>Get the tablet versatility and laptop power you need when you bundle Surface Pro 9 for Business with a Surface Pro Signature Keyboard for Business.</p>
+            <a href="#">Shop Surface Pro 9 for Business Bundle <i class="fas fa-chevron-right"></i></a>
+          </div>
 
-        <div>
-          <img src="img/card6.jpg" alt="" />
-          <h3>Try Microsoft 365 for free</h3>
-          <p>Get Microsoft Teams, secure cloud storage, and premium apps across devices with a free one-month Microsoft 365 Business Standard trial.</p>
-          <a href="#">Start your free trial <i class="fas fa-chevron-right"></i></a>
-        </div>
+          <div>
+            <img src="img/card6.jpg" alt="" />
+            <h3>Try Microsoft 365 for free</h3>
+            <p>Get Microsoft Teams, secure cloud storage, and premium apps across devices with a free one-month Microsoft 365 Business Standard trial.</p>
+            <a href="#">Start your free trial <i class="fas fa-chevron-right"></i></a>
+          </div>
 
-        <div>
-          <img src="img/card7.png" alt="" />
-          <h3>Join the era of AI</h3>
-          <p>Create, communicate, and code with the latest Microsoft AI solutions.</p>
-          <a href="#">Explore AI solutions <i class="fas fa-chevron-right"></i></a>
-        </div>
+          <div>
+            <img src="img/card7.png" alt="" />
+            <h3>Join the era of AI</h3>
+            <p>Create, communicate, and code with the latest Microsoft AI solutions.</p>
+            <a href="#">Explore AI solutions <i class="fas fa-chevron-right"></i></a>
+          </div>
 
-        <div>
-          <img src="img/card8.png" alt="" />
-          <h3>Welcome to your Windows 365 Cloud PC</h3>
-          <p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
-          <a href="#">Get it today <i class="fas fa-chevron-right"></i></a>
+          <div>
+            <img src="img/card8.png" alt="" />
+            <h3>Welcome to your Windows 365 Cloud PC</h3>
+            <p>Securely stream your Windows experience from the Microsoft cloud to any device.</p>
+            <a href="#">Get it today <i class="fas fa-chevron-right"></i></a>
+          </div>
+        </section>
+      </section>
+
+      <!-- Second slider -->
+      <section class="second-slider">
+        <div class="content">
+          <h2>Harnessing AI breakthroughs for humanity</h2>
+          <p>Experts weigh the transformative nature of GPT-4, reflecting on potential safeguards and exploring future uses in thought-provoking essays.</p>
+          <a href="#" class="btn">Read the essays</a>
         </div>
       </section>
+
+      <!-- Follow -->
+      <section class="follow">
+        <p>Follow Microsoft</p>
+        <a href="#"><i class="fa-brands fa-facebook-f fa-lg"></i></a>
+        <a href="#"><i class="fa-brands fa-twitter fa-lg"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin fa-lg"></i></a>
+      </section>
     </div>
+    <!-- Links -->
+    <section class="links">
+      <div class="links-inner">
+        <ul>
+          <li><h4>What's new</h4></li>
+          <li><a href="#">Surface Pro 9</a></li>
+          <li><a href="#">Surface Laptop 5</a></li>
+          <li><a href="#">Surface Studio 2+</a></li>
+          <li><a href="#">Surface Laptop Go 2</a></li>
+          <li><a href="#">Surface Laptop Studio</a></li>
+          <li><a href="#">Surface Go 3</a></li>
+          <li><a href="#">Microsoft 365</a></li>
+          <li><a href="#">Windows 11 apps</a></li>
+        </ul>
+        <ul>
+          <li><h4>Microsoft Store</h4></li>
+          <li><a href="#">Account profile</a></li>
+          <li><a href="#">Download Center</a></li>
+          <li><a href="#">Microsoft Store Support</a></li>
+          <li><a href="#">Returns</a></li>
+          <li><a href="#">Order tracking</a></li>
+          <li><a href="#">Trade-in for Cash</a></li>
+          <li><a href="#">Microsoft Store Promise</a></li>
+          <li><a href="#">Flexible Payments</a></li>
+        </ul>
+        <ul>
+          <li><h4>Education</h4></li>
+          <li><a href="#">Microsoft in education</a></li>
+          <li><a href="#">Devices for education</a></li>
+          <li><a href="#">Microsoft Teams for Education</a></li>
+          <li><a href="#">Microsoft 365 Education</a></li>
+          <li><a href="#">How to buy for your school</a></li>
+          <li><a href="#">Educator training and development</a></li>
+          <li><a href="#">Deals for students and parents</a></li>
+          <li><a href="#">Azure for students</a></li>
+        </ul>
+        <ul>
+          <li><h4>Business</h4></li>
+          <li><a href="#">Microsoft Cloud</a></li>
+          <li><a href="#">Microsoft Security</a></li>
+          <li><a href="#">Dynamics 365</a></li>
+          <li><a href="#">Microsoft 365</a></li>
+          <li><a href="#">Microsoft Power Platform</a></li>
+          <li><a href="#">Microsoft Teams</a></li>
+          <li><a href="#">Microsoft Industry</a></li>
+          <li><a href="#">Small Business</a></li>
+        </ul>
+        <ul>
+          <li><h4>Developer & IT</h4></li>
+          <li><a href="#">Azure</a></li>
+          <li><a href="#">Developer Center</a></li>
+          <li><a href="#">Documentation</a></li>
+          <li><a href="#">Microsoft Learn</a></li>
+          <li><a href="#">Microsoft Tech Community</a></li>
+          <li><a href="#">Azure Marketplace</a></li>
+          <li><a href="#">AppSource</a></li>
+          <li><a href="#">Visual Studio</a></li>
+        </ul>
+        <ul>
+          <li><h4>Company</h4></li>
+          <li><a href="#">Careers</a></li>
+          <li><a href="#">About Microsoft</a></li>
+          <li><a href="#">Company News</a></li>
+          <li><a href="#">Privacy at Microsoft</a></li>
+          <li><a href="#">Investors</a></li>
+          <li><a href="#">Diversity and inclusion</a></li>
+          <li><a href="#">Accessibility</a></li>
+          <li><a href="#">Sustainability</a></li>
+        </ul>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer-inner">
+        <div><i class="fas fa-sharp fa-regular fa-earth-americas fa-2x"></i> English (United States)</div>
+        <ul>
+          <li><a href="#">Sitemap</a></li>
+          <li><a href="#">Contact Microsoft</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms of use</a></li>
+          <li><a href="#">Trademarks</a></li>
+          <li><a href="#">Safety & eco</a></li>
+          <li><a href="#">Recycling</a></li>
+          <li><a href="#">About our ads</a></li>
+          <li><a href="#">&copy; Microsoft 2023</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
