--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
           <h3>New Surface Pro 7</h3>
           <p>See how Katie Sowers, Asst. Coach for the 49ers, uses Surface Pro 7 to put her plans into play.</p>
           <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+          <a href="#" class="card-link"></a>
         </div>
 
         <div>
