--- a/index.html
+++ b/index.html
@@ -8,43 +8,44 @@
     <title>Microsoft Official Homepage</title>
   </head>
   <body>
+    <!-- Nav -->
+    <nav class="main-nav">
+      <img src="img/logo.png" alt="Microsoft" class="logo" />
+
+      <ul class="main-menu">
+        <li><a href="#">Microsoft 365</a></li>
+        <li><a href="#">Teams</a></li>
+        <li><a href="#">Windows</a></li>
+        <li><a href="#">Surface</a></li>
+        <li><a href="#">Xbox</a></li>
+        <li><a href="#">Deals</a></li>
+        <li><a href="#">Small Business</a></li>
+        <li><a href="#">Support</a></li>
+      </ul>
+
+      <ul class="right-menu">
+        <li>
+          <a href="#">
+            <i class="fas fa-search"></i>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <i class="fas fa-shopping-cart"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <!-- Showcase -->
+    <header class="showcase">
+      <img src="img/Highlight-Surf-Bundles-Surface-Laptop-5-Dock-2_VP5-1920x600.avif" alt="Surface Laptop 5" />
+      <div class="header-text">
+        <h2>Surface Laptop 5</h2>
+        <p>Save big on blazing-fast speed and sophisticated style. Plus, add a free Surface Dock 2 ($259.99 value) at checkout to transform your Surface into a powerful desktop PC. Offer ends 7/2.</p>
+        <a href="#" class="btn">Shop Surface Laptop 5</a>
+      </div>
+    </header>
     <div class="container">
-      <!-- Nav -->
-      <nav class="main-nav">
-        <img src="img/logo.png" alt="Microsoft" class="logo" />
-
-        <ul class="main-menu">
-          <li><a href="#">Microsoft 365</a></li>
-          <li><a href="#">Teams</a></li>
-          <li><a href="#">Windows</a></li>
-          <li><a href="#">Surface</a></li>
-          <li><a href="#">Xbox</a></li>
-          <li><a href="#">Deals</a></li>
-          <li><a href="#">Small Business</a></li>
-          <li><a href="#">Support</a></li>
-        </ul>
-
-        <ul class="right-menu">
-          <li>
-            <a href="#">
-              <i class="fas fa-search"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#">
-              <i class="fas fa-shopping-cart"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-      <!-- Showcase -->
-      <header class="showcase">
-        <h2>Surface Deals</h2>
-        <p>Select Surfaces are on sale now - save while supplies last</p>
-        <a href="#" class="btn"> Shop Now <i class="fas fa-chevron-right"></i> </a>
-      </header>
-
       <!-- Home cards 1 -->
       <section class="home-cards">
         <div>
